--- a/LoLCardGame/assets/style/style.css
+++ b/LoLCardGame/assets/style/style.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+
 /**/
 /**/
 /**/
@@ -10,12 +11,14 @@
   font-weight: normal;
   font-style: normal;
 }
+
 @font-face {
   font-family: "stonecross";
   src: url("stonecross.ttf"), format("truetype");
   font-weight: normal;
   font-style: normal;
 }
+
 * {
   font-family: "Mythica";
 }
@@ -50,9 +53,11 @@ body,
   background-position: -600px;
   background-attachment: fixed;
 }
+
 .menu * {
   opacity: 100%;
 }
+
 .menu .title,
 .menu .subtitle {
   width: 100%;
@@ -63,10 +68,12 @@ body,
   margin-top: 6vw;
   margin-bottom: 3vw;
 }
+
 .menu .subtitle {
   font-size: 5vw;
   color: #afdbce;
 }
+
 .menu .item {
   text-align: center;
   margin: 2vw;
@@ -81,26 +88,32 @@ body,
   align-items: center;
   justify-content: center;
 }
+
 .menu .item.disabled {
   opacity: 30%;
   color: black;
   cursor: default;
 }
+
 .menu .item.disabled img {
   filter: brightness(0%);
 }
+
 .menu .item.open .info {
   display: none;
 }
+
 .menu .item.open .inner-info {
   display: flex;
 }
+
 .menu .item .info {
   display: flex;
   width: 100%;
   flex-direction: row;
   justify-content: space-between;
 }
+
 .menu .item .inner-info {
   display: none;
   font-size: 4vw;
@@ -109,9 +122,11 @@ body,
   align-items: center;
   justify-content: space-between;
 }
+
 .menu .item .inner-info .separator {
   height: 3vw;
 }
+
 .menu .item .start-game-button {
   color: black;
   background-color: #d9f1e8;
@@ -121,19 +136,23 @@ body,
   font-size: 4vw;
   cursor: pointer;
 }
+
 .menu .item .name {
   font-size: 7vw;
 }
+
 .menu .item .info {
   display: flex;
   flex-direction: row;
   justify-content: center;
   font-size: 4vw;
 }
+
 .menu .item .info img {
   width: 3.2vw;
   transform: translateY(0.3vw);
 }
+
 .menu .item .info span {
   flex-grow: 1;
 }
@@ -150,15 +169,18 @@ body,
   justify-content: space-evenly;
   height: 100%;
 }
+
 .game .box {
   display: flex;
   justify-content: center;
   width: 100%;
 }
+
 .game .top {
   margin: auto;
   margin-bottom: 4vw;
 }
+
 .game .top .text {
   font-family: "Mythica";
   font-weight: normal;
@@ -167,12 +189,14 @@ body,
   z-index: 10;
   margin-top: 1vw;
 }
+
 .game .top img {
   width: 50vw;
   position: absolute;
   top: 0;
   z-index: 2;
 }
+
 .game .top img.back {
   width: 50vw;
   position: absolute;
@@ -182,6 +206,7 @@ body,
   opacity: 50%;
   transform: translate(1vw, 1vw);
 }
+
 .game .title {
   font-weight: normal;
   text-align: center;
@@ -190,6 +215,7 @@ body,
   margin-bottom: 1vw;
   text-shadow: 0.5vw 0.5vw 1vw rgba(0, 0, 0, 0.5333333333);
 }
+
 .game .flavor-text {
   font-weight: normal;
   text-align: center;
@@ -199,6 +225,7 @@ body,
   margin-bottom: 4vw;
   text-shadow: 0.5vw 0.5vw 1vw rgba(0, 0, 0, 0.5333333333);
 }
+
 .game .loading {
   position: relative;
   background-color: #121013;
@@ -208,6 +235,7 @@ body,
   margin-bottom: 4vw;
   box-shadow: 1vw 1vw 1vw rgba(0, 0, 0, 0.5333333333);
 }
+
 .game .loading .text {
   display: flex;
   width: 100%;
@@ -217,31 +245,38 @@ body,
   position: absolute;
   height: inherit;
 }
+
 .game .loading .text .nr {
   font-size: 9vw;
   transform: translateY(-0.6vw);
 }
+
 .game .loading .text img {
   width: 14vw;
 }
+
 .game .loading.walking .text {
   display: none;
 }
+
 .game .loading.done {
   opacity: 10%;
 }
+
 .game .loading .inner {
   background-color: #88dbdb;
   height: 100%;
   border-radius: 2vw;
   transition: width 100ms linear;
 }
+
 .game .objectives {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   margin-bottom: 4vw;
 }
+
 .game .objectives .objective {
   width: 35vw;
   max-height: 18vw;
@@ -255,9 +290,11 @@ body,
   margin: 4vw;
   padding: 0 1vw;
 }
+
 .game .objectives .objective.hidden {
   opacity: 10%;
 }
+
 .game .objectives .objective .number {
   text-align: center;
   color: black;
@@ -267,6 +304,7 @@ body,
   transform: translateY(-1vw);
   flex-grow: 1;
 }
+
 .game .objectives .objective .img {
   margin: 1.5vw;
   width: 14vw;
@@ -274,36 +312,47 @@ body,
   background-repeat: no-repeat;
   background-size: 14vw 14vw;
 }
+
 .game .objectives .objective.melee {
   background-color: #ffa194;
 }
+
 .game .objectives .objective.melee .img {
   background-image: url("../images/melee.png");
 }
+
 .game .objectives .objective.ranged {
   background-color: #94ff94;
 }
+
 .game .objectives .objective.ranged .img {
   background-image: url("../images/range.png");
 }
+
 .game .objectives .objective.magic {
   background-color: #f49efc;
 }
+
 .game .objectives .objective.magic .img {
   background-image: url("../images/magic.png");
 }
+
 .game .objectives .objective.utility {
   background-color: #fdff86;
 }
+
 .game .objectives .objective.utility .img {
   background-image: url("../images/utility.png");
 }
+
 .game .objectives .objective.runeterra {
   background: linear-gradient(-45deg, #dee8f5 0%, #f8e5e5 100%);
 }
+
 .game .objectives .objective.runeterra .img {
   background-image: url("../images/runeterra.png");
 }
+
 .game .bottom {
   transform: translateY(5vw);
   margin-top: -5vw;
@@ -312,6 +361,7 @@ body,
   margin-bottom: 4vw;
   z-index: 30;
 }
+
 .game .bottom .text {
   font-family: "Mythica";
   font-weight: normal;
@@ -320,12 +370,14 @@ body,
   z-index: 1;
   margin-top: 1vw;
 }
+
 .game .bottom img {
   width: 50vw;
   position: absolute;
   top: 0;
   transform: scaleY(-1);
 }
+
 .game .bottom img.back {
   width: 50vw;
   position: absolute;
@@ -335,12 +387,14 @@ body,
   opacity: 50%;
   transform: scaleY(-1) translate(1vw, -1vw);
 }
+
 .game .map {
   position: relative;
   width: inherit;
   height: 50vw;
   box-shadow: 0 0 3vw 3vw #262329 inset;
 }
+
 .game .map .img,
 .game .map .pins {
   position: absolute;
@@ -349,9 +403,11 @@ body,
   width: 100%;
   height: 100%;
 }
+
 .game .map .img {
   overflow: hidden;
 }
+
 .game .map .pin {
   width: 5vw;
   height: 5vw;
@@ -361,15 +417,21 @@ body,
   z-index: 10;
   transform: translate(-50%, -50%);
 }
+
 .game .map .pin.current {
   background-color: #d9f1e8;
 }
+
 .game .map .pin.done {
   background-color: #89e7c5;
 }
+
 .game .map .pin.not-done {
   background-color: #262329;
 }
+
 .game .map svg {
   position: absolute;
-}/*# sourceMappingURL=style.css.map */
+}
+
+/*# sourceMappingURL=style.css.map */
